--- a/index.html
+++ b/index.html
@@ -13,8 +13,49 @@
     <title>PWA Example</title>
 </head>
 <body>
-    <h1>Welcome to My PWA Example</h1>
-    <p>This is a simple Progressive Web App example with plain JavaScript.</p>
+    <header class="header">
+        <div class="title-toggle-wrapper">
+            <h1 class="header-title">My Dashboard</h1>   
+            <div id="toggleSidebar" class="toggle-icon">&#9776;</div>
+        </div>
+        <nav class="header-content">
+            <div class="header-item">Sign Up</div>
+            <div class="header-item">Sign In</div>
+        </nav>
+    </header>
+
+    <div class="container">
+        <aside id="sidebar" class="sidebar">
+            <ul>
+                <li>Dashboard</li>
+                <li>User</li>
+                <li>Messages</li>
+                <li>Analytics</li>
+                <li>Side Manager</li>
+                <li>Order</li>
+                <li>Saved Settings</li>
+            </ul>
+        </aside>
+        <main id="mainContent" class="main-content">
+            <h1>My PWA Example</h1>
+            <p>A simple example of a Progressive Web App that provides offline access, home screen installation, responsive design, and standalone mode.</p>
+        
+            <section id="pwaFeatures" class="pwa-features">
+                <h2>Main Features</h2>
+                <ul>
+                    <li>Offline access: The app works without an internet connection.</li>
+                    <li>Add to home screen: You can install the app on your device for quick access.</li>
+                    <li>Responsive design: It looks great on any screen size.</li>
+                    <li>Standalone mode: Once installed, the app runs like a native app without a browser UI.</li>
+                </ul>
+            </section>
+            <h2>Use Google Search: </h2>
+            <form class="search-form" action="https://www.google.com/search" method="get" target="_blank" id="searchForm">
+                <input class="search-bar" type="text" name="q" placeholder="Search...">
+                <button type="submit" class="search-button">Search</button>
+            </form>
+        </main>        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
